views/common/header.css
#header-container .fav-link {
  cursor: pointer;
}
#header-container .fav-link i {
  color: #ffcf00;
}
#header-container .fav-link:hover {
  background-color: transparent !important;
}

#mobile-header {
  top: 0px;
  left: 0px;
  position: fixed;
  background-color: transparent;
  width: 100vw;
  height: 65px;      
  z-index: 99999;
  transition: top 0.2s ease-in-out;
}

#mobile-header #logo img {
  transform: none;  
}

#mobile-header .mobile-main-header {
  background-color: var(--primary-red);
  height: 50px;
  z-index: 15;
}

#hamburguer-menu {
  position: relative;
  width: 40px;
  height: 50%;
  cursor: pointer;
  transition: all .5s ease-in-out;
  z-index: 5;
}

#hamburguer-menu .hamburguer-menu-item {
  width: 100%;
  height: 3px;
  background: #fff;
  border-radius: 3px;
  box-shadow: 0 2px 5px rgba(255,101,47,.2);
  transition: all .5s ease-in-out;
  margin-top: 16px;
}

#hamburguer-menu .hamburguer-menu-item::before,
#hamburguer-menu .hamburguer-menu-item::after {
  content: '';
  position: absolute;
  width: 100%;
  height: 3px;
  background: #fff;
  border-radius: 3px;
  box-shadow: 0 2px 5px rgba(255,101,47,.2);
  transition: all .5s ease-in-out;
}

#hamburguer-menu .hamburguer-menu-item::before {
  transform: translateY(-12px);
}

#hamburguer-menu .hamburguer-menu-item::after {
  transform: translateY(12px);
}

/* ANIMATION */
#mobile-header.open #hamburguer-menu .hamburguer-menu-item {
  transform: translateX(-50px);
  background: transparent;
  box-shadow: none;
}

#mobile-header.open #hamburguer-menu .hamburguer-menu-item::before {
  transform: rotate(45deg) translate(35px, -35px);
}

#mobile-header.open #hamburguer-menu .hamburguer-menu-item::after {
  transform: rotate(-45deg) translate(35px, 35px);
}

#mobile-header .mobile-arrow-header {
  height: 15px;
  z-index: 10;
}

#mobile-header .mobile-arrow-header .mobile-arrow-header-item {
  height: 100%;
  z-index: 1;
}

#mobile-header .mobile-arrow-header div:first-child {
  width: 35px;
  background-color: var(--primary-red);        
}

#mobile-header .mobile-arrow-header div:nth-child(2n) {
  transform-origin: 0% 100%;
  width: 30px;  
  background-color: var(--primary-red);        
  transition: transform 0.5s ease-in-out;  
}

#mobile-header .mobile-arrow-header div:nth-child(3n) {
  transform-origin: 100% 100%;
  width: 30px;  
  margin-right: -30px;
  background-color: var(--primary-red);        
  transition: transform 0.5s ease;  
}

#mobile-header .mobile-arrow-header div:last-child {
  flex-grow: 1;
  background-color: var(--primary-red);
}

#mobile-header.open .mobile-arrow-header div:nth-child(2) {    
  transform: rotateZ(-45deg);
}

#mobile-header.open .mobile-arrow-header div:nth-child(3) {       
  transform: rotateZ(45deg);
}

#mobile-modal-nav .mobile-modal-container {
  opacity: 0;
  pointer-events: none;
  position: fixed;
  top: 100px;  
  left: 50%;
  transform: translateX(-50%);
  background-color: white;
  width: 80%;
  max-width: 350px;  
  z-index: 99999;
  border-radius: 5px;  
  transition: all 0.5s ease-in-out;
  padding: 1rem 1rem 0 1rem;
  color: black;
}

#mobile-header.open #mobile-modal-nav .mobile-modal-container {
  opacity: 1;
  pointer-events: all;
}

#mobile-modal-nav .mobile-modal-background {
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100vw;
  height: 100vh;
  opacity: 0;
  background-color: black;
  z-index: 1;
  transition: all 0.5s ease-in-out;
  pointer-events: none;
}

#mobile-header.open #mobile-modal-nav .mobile-modal-background {
  opacity: 0.5;  
  pointer-events: all;
}

#mobile-modal-nav .mobile-modal-container li  a{
  font-size: 1.5rem;  
  color: black;
}

#mobile-modal-nav .mobile-modal-container li {  
  display: flex;
  flex-direction: row;
  align-items: center;
}

#mobile-modal-nav .mobile-modal-container ul {  
  list-style-type: none;
  padding-left: 0px;
}

#mobile-modal-nav .mobile-menu-item {
  display: flex;  
  align-items: center;
  height: 45px;
  width: 100%;
  border-top: 1px solid lightgray;
  color: grey;
  padding-left: 2rem;  
}

#mobile-modal-nav .mobile-menu-item:hover {
  background-color: #f4f4f4;
}

#mobile-modal-nav .mobile-menu-item:last-of-type {
  border-bottom: 1px solid lightgray;
}

#mobile-modal-nav .mobile-menu-item.current::before {
  content: "";
  position: relative;  
  left: -2rem;
  background-color: var(--primary-red);
  width: 1rem;
  height: 110%;  
}

